[gd_scene load_steps=10 format=3 uid="uid://dm0l6yxy0o7mx"]

[ext_resource type="Texture2D" uid="uid://ij10rmji1i2q" path="res://graphics/textures/particle_radial_2.png" id="1_ncadv"]
[ext_resource type="Script" uid="uid://bhbfqn4u34ahf" path="res://scenes/vfx/pickup.gd" id="1_t8ltr"]

[sub_resource type="Curve" id="Curve_x31iq"]
_data = [Vector2(0, 0.703855), 0.0, 0.0, 0, 0, Vector2(0.159021, 0.855724), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_bgfoa"]
curve = SubResource("Curve_x31iq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fhbr0"]
lifetime_randomness = 0.3
particle_flag_align_y = true
particle_flag_rotate_y = true
emission_shape = 2
emission_sphere_radius = 0.01
inherit_velocity_ratio = 0.3
direction = Vector3(0, 1, 0)
spread = 5.0
initial_velocity_min = 0.11
initial_velocity_max = 0.11
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_bgfoa")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w4rl6"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_color = Color(0.0632764, 0.145623, 0.310395, 1)
albedo_texture = ExtResource("1_ncadv")
refraction_scale = 1.0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
grow_amount = 0.5
proximity_fade_distance = 2390.33

[sub_resource type="QuadMesh" id="QuadMesh_1jeg5"]
material = SubResource("StandardMaterial3D_w4rl6")
size = Vector2(0.35, 0.35)

[sub_resource type="BoxShape3D" id="BoxShape3D_ncadv"]
size = Vector3(1.45923, 1, 1.24902)

[sub_resource type="LabelSettings" id="LabelSettings_ncadv"]
font_size = 24
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Pickup" type="Node3D"]
script = ExtResource("1_t8ltr")

[node name="AuraParticles" type="GPUParticles3D" parent="."]
amount = 100
lifetime = 2.0
preprocess = 1.0
randomness = 0.25
fixed_fps = 15
interpolate = false
fract_delta = false
process_material = SubResource("ParticleProcessMaterial_fhbr0")
draw_pass_1 = SubResource("QuadMesh_1jeg5")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_ncadv")

[node name="PickupUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PickupUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -121.0
offset_right = 362.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="PickupUI/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PickupUI/MarginContainer"]
layout_mode = 2
text = "Press E to pickup"
label_settings = SubResource("LabelSettings_ncadv")
horizontal_alignment = 1

[node name="ItemPickedUpUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ItemPickedUpUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -121.0
offset_right = 362.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="ItemPickedUpUI/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemPickedUpUI/MarginContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ncadv")
horizontal_alignment = 1

[node name="Timers" type="Node" parent="."]

[node name="PickupTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timers/PickupTimer" to="." method="_on_pickup_timer_timeout"]
